--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -23,6 +23,24 @@ source $(brew --prefix)/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 
 {{- end }}
 
+{{- if eq .chezmoi.hostname "fedora" }}
+# Lines configured by zsh-newuser-install
+HISTFILE=~/.zsh/histfile
+HISTSIZE=10000
+SAVEHIST=10000
+bindkey -e
+# End of lines configured by zsh-newuser-install
+
+# CUDA
+export PATH=${PATH}:/usr/local/cuda/bin
+
+# Rust Cargo
+export PATH=${PATH}:~/.cargo/bin
+
+# zsh-autosuggestions
+source ~/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh
+{{- end }}
+
 # Starship prompt
 eval "$(starship init zsh)"
 
