--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -46,6 +46,9 @@ export PATH=${PATH}:~/.cargo/bin
 
 # zsh-autosuggestions
 source ~/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh
+
+# Chezmoi editor (config toml doesn't work?)
+export EDITOR="nvim"
 {{- end }}
 
 # Starship prompt
