--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -7,5 +7,5 @@
 {{ if eq .chezmoi.hostname "fedora" -}}
 [credential]
 	helper = /usr/local/bin/git-credential-manager
-	credentialStore = cache
+	credentialStore = secretservice
 {{ end }}
