Update .zshrc for LunarVim

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -51,3 +51,6 @@ source ~/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh
 # Starship prompt
 eval "$(starship init zsh)"
 
+# Add default install path for LunarVim
+export PATH=${PATH}:~/.local/bin
+
