Add config for M93p home server

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -10,3 +10,12 @@
 [credential "https://gist.github.com"]
   helper = !/etc/profiles/per-user/anthony/bin/gh auth git-credential
 {{ end }}
+
+{{ if eq .chezmoi.hostname "m93p" -}}
+[credential "https://github.com"]
+	helper =
+	helper = !/run/current-system/sw/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper =
+	helper = !/run/current-system/sw/bin/gh auth git-credential
+{{ end }}
