--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -11,11 +11,32 @@
   helper = !/etc/profiles/per-user/anthony/bin/gh auth git-credential
 {{ end }}
 
-{{ if eq .chezmoi.hostname "m93p" -}}
+{{- if eq .chezmoi.hostname "m93p" -}}
 [credential "https://github.com"]
 	helper =
 	helper = !/run/current-system/sw/bin/gh auth git-credential
 [credential "https://gist.github.com"]
 	helper =
 	helper = !/run/current-system/sw/bin/gh auth git-credential
+{{ end }}
+
+{{- if eq .chezmoi.hostname "Anthonys-MacBook-Pro" -}}
+[diff]
+    external = difft
+    # Set difftastic as the default difftool, so we don't need to specify
+    # `-t difftastic` every time.
+    tool = difftastic
+
+[difftool "difftastic"]
+    # See `man git-difftool` for a description of MERGED, LOCAL and REMOTE.
+    cmd = difft "$MERGED" "$LOCAL" "abcdef1" "100644" "$REMOTE" "abcdef2" "100644"
+
+[difftool]
+    # Run the difftool immediately, don't ask 'are you sure' each time.
+    prompt = false
+
+[pager]
+    # Use a pager if the difftool output is larger than one screenful,
+    # consistent with the behaviour of `git diff`.
+    difftool = true
 {{ end }}
