darwin: Fix configs not applying by using OS instead of hostname.
Using an exit node in Tailscale would change the hostname, leading to
the git and lazygit configs not being applied from template.

--- a/dot_config/lazygit/config.yml.tmpl
+++ b/dot_config/lazygit/config.yml.tmpl
@@ -1,4 +1,4 @@
-{{- if eq .chezmoi.hostname "Anthonys-MacBook-Pro" -}}
+{{- if eq .chezmoi.os "darwin" -}}
 # Config relating to git
 git:
   # See https://github.com/jesseduffield/lazygit/blob/master/docs/Custom_Pagers.md
