--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -20,13 +20,7 @@
 	helper = !/run/current-system/sw/bin/gh auth git-credential
 {{ end }}
 
-{{- if eq .chezmoi.hostname "Anthonys-MacBook-Pro" -}}
-[diff]
-    external = difft
-    # Set difftastic as the default difftool, so we don't need to specify
-    # `-t difftastic` every time.
-    tool = difftastic
-
+{{- if eq .chezmoi.os "darwin" -}}
 [difftool "difftastic"]
     # See `man git-difftool` for a description of MERGED, LOCAL and REMOTE.
     cmd = difft "$MERGED" "$LOCAL" "abcdef1" "100644" "$REMOTE" "abcdef2" "100644"
@@ -39,4 +33,10 @@
     # Use a pager if the difftool output is larger than one screenful,
     # consistent with the behaviour of `git diff`.
     difftool = true
+
+[diff]
+    external = difft
+    # Set difftastic as the default difftool, so we don't need to specify
+    # `-t difftastic` every time.
+    tool = difftastic
 {{ end }}
