--- a/modules/home/hyprland/waybar.css
+++ b/modules/home/hyprland/waybar.css
@@ -1,55 +1,51 @@
+@define-color base00 #1e1e2e; @define-color base01 #181825; @define-color base02 #313244; @define-color base03 #45475a;
+@define-color base04 #585b70; @define-color base05 #cdd6f4; @define-color base06 #f5e0dc; @define-color base07 #b4befe;
+
+@define-color base08 #f38ba8; @define-color base09 #fab387; @define-color base0A #f9e2af; @define-color base0B #a6e3a1;
+@define-color base0C #94e2d5; @define-color base0D #89b4fa; @define-color base0E #cba6f7; @define-color base0F #f2cdcd;
+
+.modules-left #workspaces button {
+    border-bottom: 3px solid transparent;
+}
+.modules-left #workspaces button.focused,
+.modules-left #workspaces button.active {
+    border-bottom: 3px solid @base05;
+}
+.modules-center #workspaces button {
+    border-bottom: 3px solid transparent;
+}
+.modules-center #workspaces button.focused,
+.modules-center #workspaces button.active {
+    border-bottom: 3px solid @base05;
+}
+.modules-right #workspaces button {
+    border-bottom: 3px solid transparent;
+}
+.modules-right #workspaces button.focused,
+.modules-right #workspaces button.active {
+    border-bottom: 3px solid @base05;
+}
 * {
-    border: none;
-    border-radius: 0;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-family: "FiraCode Nerd Font Mono", Roboto, Helvetica, Arial, sans-serif;
     font-size: 13px;
     min-height: 0;
 }
 
-window#waybar {
-    background: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: white;
+window#waybar, tooltip {
+    background: alpha(@base00, 1.000000);
+    color: @base05;
 }
 
 .modules-left {
-  padding-left: 2em;
+  padding-left: 1.5em;
 }
 
 .modules-right {
-  padding-right: 2em;
+  padding-right: 1.5em;
 }
 
 tooltip {
-  background: rgba(43, 48, 59, 0.5);
-  border: 1px solid rgba(100, 114, 125, 0.5);
-}
-
-tooltip label {
-  color: white;
-}
-
-#workspaces button {
-    padding: 0 5px;
-    background: transparent;
-    color: white;
-    border-bottom: 3px solid transparent;
-}
-
-#workspaces button.focused {
-    background: #64727D;
-    border-bottom: 3px solid white;
-}
-
-#workspaces button.active{
-    font-weight: bold;
-    background: #64727D;
-    border-bottom: 3px solid white;
-}
-
-#clock {
-    padding: 0 10px;
-    background-color: #64727D;
+  border: 1px solid @base0D;
 }
 
 #workspaces, #cpu, #memory, #network {
