--- a/modules/home/hyprland/waybar.css
+++ b/modules/home/hyprland/waybar.css
@@ -4,6 +4,17 @@
 @define-color base08 #f38ba8; @define-color base09 #fab387; @define-color base0A #f9e2af; @define-color base0B #a6e3a1;
 @define-color base0C #94e2d5; @define-color base0D #89b4fa; @define-color base0E #cba6f7; @define-color base0F #f2cdcd;
 
+* {
+    font-family: "FiraCode Nerd Font Mono", Roboto, Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    min-height: 0;
+}
+
+#workspaces button.active {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
 .modules-left #workspaces button {
     border-bottom: 3px solid transparent;
 }
@@ -24,11 +35,6 @@
 .modules-right #workspaces button.focused,
 .modules-right #workspaces button.active {
     border-bottom: 3px solid @base05;
-}
-* {
-    font-family: "FiraCode Nerd Font Mono", Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    min-height: 0;
 }
 
 window#waybar, tooltip {
