--- a/modules/home/waybar/waybar.css
+++ b/modules/home/waybar/waybar.css
@@ -4,6 +4,7 @@
 @define-color base08 #f38ba8; @define-color base09 #fab387; @define-color base0A #f9e2af; @define-color base0B #a6e3a1;
 @define-color base0C #94e2d5; @define-color base0D #89b4fa; @define-color base0E #cba6f7; @define-color base0F #f2cdcd;
 
+
 * {
     font-family: "Noto Sans", "Noto Sans CJK JP", "Noto Sans CJK SC", "FiraCode Nerd Font Propo", Arial, sans-serif;
     font-size: 16px;
@@ -15,13 +16,6 @@
     border-bottom-right-radius: 0;
 }
 
-.modules-left #workspaces button {
-    border-bottom: 3px solid transparent;
-}
-.modules-left #workspaces button.focused,
-.modules-left #workspaces button.active {
-    border-bottom: 3px solid @base05;
-}
 .modules-center #workspaces button {
     border-bottom: 3px solid transparent;
 }
@@ -29,32 +23,58 @@
 .modules-center #workspaces button.active {
     border-bottom: 3px solid @base05;
 }
-.modules-right #workspaces button {
-    border-bottom: 3px solid transparent;
-}
-.modules-right #workspaces button.focused,
-.modules-right #workspaces button.active {
-    border-bottom: 3px solid @base05;
-}
 
-window#waybar, tooltip {
-    background: alpha(@base00, 1.000000);
+
+window#waybar{
     color: @base05;
-}
-
-.modules-left {
-  padding-left: 1.5em;
-}
-
-.modules-right {
-  padding-right: 1.5em;
+    background: none;
 }
 
 tooltip {
-  border: 1px solid @base0D;
+    color: @base05;
+    background: alpha(@base00, 1.000000);
 }
 
-#workspaces, #cpu, #memory, #network {
-  margin: 0 1em 0 1em;
+.modules-left, .modules-center, .modules-right {
+    background: alpha(@base00, 1.000000);
+}
+
+.modules-left {
+    padding-left: 1.5em;
+    border-radius: 0 0 5px 0;
+    border-top: none;
+    border-bottom: 1.5px solid @base04;
+    border-left: none;
+    border-right: 1.5px solid @base04;
+}
+
+.modules-center {
+    padding-left: 1em;
+    padding-right: 1em;
+    border-radius: 0 0 5px 5px;
+    border-top: none;
+    border-bottom: 1.5px solid @base04;
+    border-left: 1.5px solid @base04;
+    border-right: 1.5px solid @base04;
+}
+
+.modules-right {
+    padding-right: 1.5em;
+    border-radius: 0 0 0 5px;
+    border-top: none;
+    border-bottom: 1.5px solid @base04;
+    border-left: 1.5px solid @base04;
+    border-right: none;
+}
+
+tooltip {
+    border: 1px solid @base0D;
+}
+
+.modules-left #cpu, .modules-left #memory, .modules-left #network {
+    margin-right: 1em;
+}
+.modules-right #custom-ncspot, .modules-right #pulseaudio, .modules-right #clock {
+    margin-left: 1em;
 }
 
