m93p: Display calendar in waybar clock toolbar

--- a/modules/home/waybar/waybar.css
+++ b/modules/home/waybar/waybar.css
@@ -6,7 +6,7 @@
 
 
 * {
-    font-family: "Noto Sans", "Noto Sans CJK JP", "Noto Sans CJK SC", "FiraCode Nerd Font Propo", Arial, sans-serif;
+    font-family: "Noto Sans", "Noto Sans CJK JP", "Noto Sans CJK SC", "FiraCode Nerd Font Propo", "FiraCode Nerd Font Mono", Arial, sans-serif;
     font-size: 16px;
     min-height: 0;
 }
